[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["nusuke <nusukep@gmail.com>"]
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
create-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
